ingress/wiremock-gui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wiremock-service-gui
  namespace: wiremock
spec:
  selector:
    app: wiremock-gui
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: ClusterIP #by default CLusterIP only accessible from within the cluster

# to access from outside we need to do port forwarding
# kubectl port-forward service/wiremock-service 8080:8080 {localSystemPort:clusterIpPort}
